# sqlite-utils-plugin

./: README.md  input-for-demo.txt
sqlite-utils-{{cookiecutter.hyphenated}}/: README.md  pyproject.toml  sqlite_utils_{{cookiecutter.underscored}}.py
sqlite-utils-{{cookiecutter.hyphenated}}/.github/workflows/: publish.yml
sqlite-utils-{{cookiecutter.hyphenated}}/tests/: test_{{cookiecutter.underscored}}.py
tests/: test_cookiecutter_template.py
